# archive_processing

./: .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
cfg/: config.cfg  config_sample.cfg  test_delete_processor.cfg
core/: generic_observation_processor.py  mwa_archiving.py  mwa_fits.py  mwa_metadata.py  processor_webservice.py
obsolete/: generic_observation_processor.py  mwa_archiving.py  observation.py  test_processor.py
obsolete/archive_processing/core/: observation.py  processor_webservice.py
obsolete/archive_processing/utils/: ceph.py  (+1 more)
obsolete/old/: delete_vcs_raw_processor.py
offline_compression_processor/: config.cfg  offline_compression_processor.py
processor/core/: generic_observation_processor.py  generic_processor.py  observation.py  processor_webservice.py
processor/processors/: delete_processor.py  delete_vcs_raw_processor.py  flag_archiver.py  offline_compression_processor.py  test_processor.py
processor/utils/: database.py  mwa_archiving.py  mwa_fits.py  mwa_metadata.py  ngas_metadata.py
scripts/: delete_processor.py  offline_compression_processor.py  test_processor.py
src/: cli.py  cmd_utils.py  delete_processor.py  delete_repository.py  incomplete_processor.py  incomplete_repository.py  main.py  mwa_utils.py  processor.py  repository.py
src/new/: db.py  main.py  processor.py  pytest.ini  repository.py  sql.py  test.sql  test_delete_processor.py
src/tests/: test_delete_processor.py  test_mwa_utils.py  test_schema.sql
tests/: setup_test_data.sql
(+10 files in other folders)
