[metadata]
name = archive_processing
version = 2.0.0
author = Greg Sleap
author_email = greg.sleap@curtin.edu.au
description = A module to manage processing of the MWA archive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MWATelescope/archive_processing
keywords = 
    MWA
    radioastronomy
    archiving

project_urls =
    Bug Tracker = https://github.com/MWATelescope/archive_processing/issues
classifiers =    
    Development Status :: 4 - Beta  
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)    
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    psycopg
    psycopg_pool
    requests
    tenacity
    python-openstackclient
    boto3
    astropy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
            delete_processor = archive_processing.processors.delete_processor:run            

[options.extras_require]
# Use: pip install -e .[test]
# to install the package in developer/editable mode along with the test dependencies.
test =
    pytest
